cmake_minimum_required(VERSION 3.15)
project(Data)

set(CMAKE_CXX_STANDARD 14)

add_executable(Data main.cpp DataClass/3_10BookPreview.cpp DataClass/3_12ClassFile.cpp DataClass/3_15SolutionHomework.cpp DataClass/3_18ClassFile.cpp DataClass/3_18SqlistTest.cpp DataClass/3_19SqlistHomework1.cpp DataClass/3_19LinknodeHomework2.cpp DataClass/3_11ClassFile_malloc_01.cpp DataClass/3_25_DLinknodeHomework.cpp DataClass/4_1_SqStackHomework.cpp DataClass/4_2_LinkStNodeHomework.cpp DataClass/4_13_SqStringHomework.cpp DataClass/TestHanci.cpp)